// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-uploader/IconName should not render alert badge on file IconName when not in error state 1`] = `
<div
  className="bcu-item-icon-name"
>
  <div
    className="bcu-item-icon"
  >
    <FileIcon
      extension="pdf"
    />
  </div>
  <div
    className="bcu-item-name"
  >
    <ItemName
      name="hi"
    />
  </div>
</div>
`;

exports[`elements/content-uploader/IconName should not render alert badge on folder IconName when not in error state 1`] = `
<div
  className="bcu-item-icon-name"
>
  <div
    className="bcu-item-icon"
  >
    <IconFolderPersonal />
  </div>
  <div
    className="bcu-item-name"
  >
    <ItemName
      name="hi"
    />
  </div>
</div>
`;

exports[`elements/content-uploader/IconName should render file IconName correctly 1`] = `
<div
  className="bcu-item-icon-name"
>
  <div
    className="bcu-item-icon"
  >
    <FileIcon
      extension="pdf"
    />
  </div>
  <div
    className="bcu-item-name"
  >
    <ItemName
      name="hi"
    />
  </div>
</div>
`;

exports[`elements/content-uploader/IconName should render file IconName with alert badge correctly 1`] = `
<div
  className="bcu-item-icon-name"
>
  <div
    className="bcu-item-icon"
  >
    <Badgeable
      bottomRight={
        <IconAlertDefault
          height={18}
          width={18}
        />
      }
      className="bcu-icon-badge"
    >
      <FileIcon
        extension="pdf"
      />
    </Badgeable>
  </div>
  <div
    className="bcu-item-name"
  >
    <ItemName
      name="hi"
    />
  </div>
</div>
`;

exports[`elements/content-uploader/IconName should render folder IconName correctly 1`] = `
<div
  className="bcu-item-icon-name"
>
  <div
    className="bcu-item-icon"
  >
    <IconFolderPersonal />
  </div>
  <div
    className="bcu-item-name"
  >
    <ItemName
      name="hi"
    />
  </div>
</div>
`;

exports[`elements/content-uploader/IconName should render folder IconName with alert badge correctly 1`] = `
<div
  className="bcu-item-icon-name"
>
  <div
    className="bcu-item-icon"
  >
    <Badgeable
      bottomRight={
        <IconAlertDefault
          height={18}
          width={18}
        />
      }
      className="bcu-icon-badge"
    >
      <IconFolderPersonal />
    </Badgeable>
  </div>
  <div
    className="bcu-item-name"
  >
    <ItemName
      name="hi"
    />
  </div>
</div>
`;
